# bevy_scene_viewer

./: Cargo.toml
src/: assets.rs  config.rs  main.rs
