# See the keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "scene_viewer"
version = "0.1.0"
edition = "2021"

[features]
dev = ["dynamic", "debug"]
dynamic = ["bevy/dynamic"]
debug = []

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", features = ["jpeg"] }
